# flowSensor

./: CMakeLists.txt  DigiFlow.h.in  README.md  TODO.txt  custom.cmake  custom.h.in  digiflow.h.in  lwipopts.h  main.c  pico-onewire.patch  pico_extras_import.cmake  pico_onewire_import.cmake  preparePico-extras.sh  preparePico-onewire.sh  tcp_in-c.patch
examples/: CMakeLists.txt  EPD_Test.h  dhcpserver.c  dhcpserver.h  lwipopts.h  my_fsdata.c  one_wire_c.h  ssi.c  ssi.h  water-cnfg.c  water-ctrl.c  water-ctrl.h  waterbcd.h
examples/fs/: calKDn_xml.shtml  calQDn_xml.shtml  calQUp_xml.shtml  calUp_xml.shtml  gaugeSVG.js  index.html  panel.html  ssi.shtml  ssi_xml.shtml  totv_dyn.shtml
fs/: fsdata.c
lib/Config/: DEV_Config.c
lib/LCD/: CMakeLists.txt
